--- a/after-login-profile.html
+++ b/after-login-profile.html
@@ -333,11 +333,14 @@
                <ul class="account-menu-box">
                   <li>
                      <div class="account-buttons">
-                         <a href="javascript:;" class="user-name-account-bottons">Some text here</a>
+                         <a href="javascript:;" class="user-name-account-bottons">Hi, fuddin@n...</a>
                         <a href="javascript:;" class="account"></a>
                         <a href="javascript:;" class="drop-arrow"></a>
                      </div>
                      <ul class="hover-account-box">
+                        <li class="account-hover-box">
+                            <a href="">Profile</a>
+                         </li>
                         <li class="account-hover-box">
                            <a href="">Sign in</a>
                         </li>
