--- a/store.html
+++ b/store.html
@@ -2657,6 +2657,8 @@
                         </div>
                         <!--After login show Recommend-->
                         <div class="store-rating-top"><div class="store-rating-divider"></div><div class="store-rating-recommend"> Would you recommend this store to a friend? <div class="btn-container"><span class="btn recommend-yes"><span class="checkmark"></span>Yes</span><span class="btn recommend-no"><span class="crossmark"></span>No</span></div></div></div>
+
+                        <div class="store-rating-feedback"><div class="rate-success"><span class="checkmark"></span>Thank you for your feedback!</div><div class="rate-error"><span class="crossmark"></span><span class="err-msg">Sorry, we could not count your vote. Try again?</span></div></div>
                         
                         <div class="social-network-favourite-box-div">
                             <ul>
